--- a/package.json
+++ b/package.json
@@ -14,6 +14,13 @@
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "jade": "^1.9.2",
-    "morgan": "~1.9.1"
-  }
+    "mongoose": "^5.9.2",
+    "morgan": "~1.9.1",
+    "readline": "^1.3.0",
+    "seedgoose": "^2.0.2"
+  },
+  "devDependencies": {
+	  "hbs": "^4.2.0",
+	  "seedgoose": "^2.0.2"
+}
 }
